--- a/src/entities/profile-badge/profile-badge.module.css
+++ b/src/entities/profile-badge/profile-badge.module.css
@@ -1,7 +1,34 @@
 .root {
+	position: relative;
 	display: flex;
 	align-items: center;
 	gap: 16px;
+
+	width: fit-content;
+	padding: 2px 4px;
+	border-radius: 8px;
+
+	transition: 0.3s;
+	cursor: pointer;
+
+	overflow: hidden;
+}
+
+.root:hover .icons {
+	opacity: 100;
+}
+
+.icons {
+	display: flex;
+	opacity: 0;
+	transition: 0.3s;
+	width: 100%;
+	background-color: #fff;
+	position: absolute;
+	gap: 32px;
+	font-weight: 900;
+	left: 50px;
+	padding: 20px 30px 20px 30px;
 }
 
 .title {
