--- a/src/entities/nav-menu-item/nav-menu-item.module.css
+++ b/src/entities/nav-menu-item/nav-menu-item.module.css
@@ -1,15 +1,19 @@
 .root {
-	text-decoration: none;
-
 	position: relative;
+
 	padding: 0 16px 0 0;
+
+	text-decoration: none;
 }
 
 .title {
 	padding: 8px;
-	transition: 0.3s;
-	border-radius: 8px;
+
 	color: #000;
+
+	border-radius: 8px;
+
+	transition: 0.3s;
 }
 
 .active {
@@ -22,10 +26,12 @@
 
 .activeChevron {
 	position: absolute;
-	background-color: #3761ee;
 	top: 2px;
-	bottom: 2px;
 	right: 0;
+	bottom: 2px;
+
 	width: 5px;
-	border-radius: 4px 0px 0px 4px;
+
+	background-color: #3761ee;
+	border-radius: 4px 0 0 4px;
 }
