--- a/src/entities/profile-badge/profile-badge.module.css
+++ b/src/entities/profile-badge/profile-badge.module.css
@@ -1,34 +1,38 @@
 .root {
 	position: relative;
-	display: flex;
-	align-items: center;
-	gap: 16px;
 
+	display: flex;
+	gap: 16px;
+	align-items: center;
 	width: fit-content;
 	padding: 2px 4px;
-	border-radius: 8px;
+	overflow: hidden;
 
-	transition: 0.3s;
+	border-radius: 8px;
 	cursor: pointer;
 
-	overflow: hidden;
+	transition: 0.3s;
+}
+
+.icons {
+	position: absolute;
+	left: 50px;
+
+	display: flex;
+	gap: 32px;
+	width: 100%;
+	padding: 20px 30px;
+
+	font-weight: 900;
+
+	background-color: #fff;
+	opacity: 0;
+
+	transition: 0.3s;
 }
 
 .root:hover .icons {
 	opacity: 100;
-}
-
-.icons {
-	display: flex;
-	opacity: 0;
-	transition: 0.3s;
-	width: 100%;
-	background-color: #fff;
-	position: absolute;
-	gap: 32px;
-	font-weight: 900;
-	left: 50px;
-	padding: 20px 30px 20px 30px;
 }
 
 .title {
@@ -36,6 +40,6 @@
 }
 
 .email {
-	font-size: 12px;
 	color: #979797;
+	font-size: 12px;
 }
