--- a/src/pages/Translator/translator.module.css
+++ b/src/pages/Translator/translator.module.css
@@ -4,18 +4,31 @@
 }
 
 .inputsBlock {
-	margin-top: 32px;
-
 	display: flex;
 	gap: 16px;
+	margin-top: 32px;
 }
 
 .rootInput {
 	width: 500px;
-
 	margin-top: 8px;
 }
 
 .info {
 	margin-top: 64px;
+}
+
+.synonymsBlock {
+	width: 500px;
+	box-sizing: border-box;
+	margin-top: 8px;
+	background-color: rgb(245, 245, 245);
+	color: rgb(128, 128, 128);
+	padding: 8px 4px;
+}
+
+.list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
