--- a/src/pages/Translator/translator.module.css
+++ b/src/pages/Translator/translator.module.css
@@ -19,16 +19,19 @@
 }
 
 .synonymsBlock {
-	width: 500px;
 	box-sizing: border-box;
+	width: 500px;
 	margin-top: 8px;
-	background-color: rgb(245, 245, 245);
-	color: rgb(128, 128, 128);
 	padding: 8px 4px;
+
+	color: rgb(128 128 128);
+
+	background-color: rgb(245 245 245);
 }
 
 .list {
-	list-style: none;
 	margin: 0;
 	padding: 0;
+
+	list-style: none;
 }
