--- a/src/pages/Translator/translator.module.css
+++ b/src/pages/Translator/translator.module.css
@@ -35,3 +35,13 @@
 
 	list-style: none;
 }
+
+.addButton {
+	margin-top: 8px;
+}
+
+.header {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+}
