--- a/src/shared/button/button.module.css
+++ b/src/shared/button/button.module.css
@@ -1,17 +1,43 @@
+.reset {
+    width: auto;
+    margin: 0;
+    padding: 0;
+    overflow: visible;
+
+    /* inherit font & color from ancestor */
+    color: inherit;
+    font: inherit;
+
+    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+    line-height: normal;
+
+    background: transparent;
+	border: 0;
+
+    /* Corrects inability to style clickable `input` types in iOS */
+    appearance: none;
+
+    /* Corrects font smoothing for webkit */
+    -webkit-font-smoothing: inherit;
+    -moz-osx-font-smoothing: inherit;
+}
+
 .root {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	box-sizing: border-box;
-	width: 100%;
-	height: 40px;
+	width: fit-content;
+	height: 24px;
 	padding: 4px 8px;
 
 	color: #fff;
 
+	font-size: 12px;
+
 	background-color: rgb(98 79 226);
 
-	border-radius: 4px;
+	border-radius: 2px;
 	cursor: pointer;
 
 	transition: 0.3s;
@@ -24,5 +50,5 @@
 }
 
 .root:active {
-	transform: scale(0.99);
+	transform: scale(0.95);
 }
