--- a/src/entities/history-table/history-table.module.css
+++ b/src/entities/history-table/history-table.module.css
@@ -2,12 +2,12 @@
 	display: contents;
 }
 
-.row {
+.row div {
 	transition: 0.3s;
 }
 
 .row:hover div {
-	background-color: rgb(251 251 251);
+	background-color: var(--dark-hover);
 }
 
 .actionCell * {
