--- a/src/entities/nav-menu-item/nav-menu-item.module.css
+++ b/src/entities/nav-menu-item/nav-menu-item.module.css
@@ -9,7 +9,7 @@
 .title {
 	padding: 8px;
 
-	color: #000;
+	color: var(--main-color);
 
 	border-radius: 8px;
 
@@ -21,7 +21,7 @@
 }
 
 .title:hover {
-	background: #f5f5f5;
+	background: var(--dark-hover);
 }
 
 .activeChevron {
