--- a/src/shared/sidebar-base/sidebar-base.module.css
+++ b/src/shared/sidebar-base/sidebar-base.module.css
@@ -26,7 +26,7 @@
 	right: 0;
 	width: var(--root-width);
 	height: 100vh;
-	background-color: var(--white);
+	background-color: var(--main-background-color);
 
 	box-shadow: -14px 0px 37px 20px rgba(34, 60, 80, 0.14);
 }
