--- a/src/shared/tab/tab.module.css
+++ b/src/shared/tab/tab.module.css
@@ -15,7 +15,7 @@
 .active {
 	font-weight: 500;
 
-	background-color: rgb(250 252 255);
+	background-color: var(--dark-hover);
 }
 
 .root:not(.active) {
