--- a/src/shared/button/button.module.css
+++ b/src/shared/button/button.module.css
@@ -28,16 +28,16 @@
 	justify-content: center;
 	box-sizing: border-box;
 	width: fit-content;
-	height: 24px;
+	height: 40px;
 	padding: 4px 8px;
 
 	color: #fff;
 
-	font-size: 12px;
+	font-size: 16px;
 
-	background-color: rgb(98 79 226);
+	background-color: var(--blue);
 
-	border-radius: 2px;
+	border-radius: 4px;
 	cursor: pointer;
 
 	transition: 0.3s;
@@ -46,7 +46,7 @@
 }
 
 .root:hover {
-	background-color: rgb(48 49 216);
+	background-color: var(--dark-blue);
 }
 
 .root:active {
