--- a/src/variables.css
+++ b/src/variables.css
@@ -14,6 +14,9 @@ html[data-theme='light'] {
     --dark-hover: #f5f5f5;
 
     --gray-border: #d9d9d9;
+
+    --blue: #382bf0;
+    --dark-blue: #251ca4;
 }
 
 html[data-theme='dark'] {
@@ -23,6 +26,9 @@ html[data-theme='dark'] {
     --dark-hover: #272727;
 
     --gray-border: #4f4f4f;
+
+    --blue: #7a5af5;
+    --dark-blue: #5540aa;
 }
 
 #page {
