--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -6,9 +6,9 @@
 
 	height: 100vh;
 
-	color: #000;
+	color: var(--main-color);
 
-	background-color: rgb(226 226 226);
+	background-color: var(--main-background-color);
 }
 
 .authForm {
@@ -18,7 +18,7 @@
 	height: 300px;
 	padding: 16px 32px;
 
-	background-color: #fff;
+	background-color: var(--main-background-color);
 }
 
 .input {
