--- a/src/pages/Translator/translator.module.css
+++ b/src/pages/Translator/translator.module.css
@@ -24,9 +24,7 @@
 	margin-top: 8px;
 	padding: 8px 4px;
 
-	color: rgb(128 128 128);
-
-	background-color: rgb(245 245 245);
+	color: var(--main-color);
 }
 
 .list {
