--- a/src/entities/words-table/words-table.module.css
+++ b/src/entities/words-table/words-table.module.css
@@ -13,6 +13,10 @@
 	background-color: var(--dark-hover);
 }
 
+.row.selected div {
+	background-color: #537df99d;
+}
+
 .deleteCell {
 	transition: 0;
 	opacity: 0;
@@ -22,4 +26,10 @@
 .row:hover .deleteCell {
 	opacity: 1;
 	user-select: all;
+}
+
+.dataCell {
+	font-size: 12px;
+	
+	color: var(--gray);
 }
