--- a/src/variables.css
+++ b/src/variables.css
@@ -5,6 +5,9 @@ html {
 
     --white: #fff;
     --black: #000;
+    --gray: #8a8a8a;
+
+    --default-border-radius: 6px;
 }
 
 html[data-theme='light'] {
