--- a/src/entities/nav-menu-item/nav-menu-item.module.css
+++ b/src/entities/nav-menu-item/nav-menu-item.module.css
@@ -13,15 +13,18 @@
 
 	border-radius: 8px;
 
+	opacity: .5;
+
 	transition: 0.3s;
 }
 
-.active {
-	color: var(--blue);
+.active .title {
+	opacity: 1;
 }
 
 .title:hover {
 	background: var(--dark-hover);
+	opacity: 1;
 }
 
 .activeChevron {
