--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+body[data-is-open-modal="true"] {
+	height: 100vh;
+	overflow: hidden;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
