--- a/src/shared/checkbox/checkbox.module.css
+++ b/src/shared/checkbox/checkbox.module.css
@@ -1,14 +1,19 @@
 .root {
+	position: relative;
+
 	--size: 16px;
+
+	box-sizing: border-box;
 	width: var(--size);
 	height: var(--size);
 
-	--border-size: 1px;
 	border: var(--border-size) solid var(--gray);
 
-	box-sizing: border-box;
-
 	border-radius: 4px;
+
+	--border-size: 1px;
+
+	user-select: none;
 }
 
 .root:hover {
@@ -22,4 +27,14 @@
 .root:has(input:checked) {
 	--border-size: 0;
 	background-color: var(--blue);
+}
+
+.icon {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	fill: var(--white);
 }
