--- a/src/variables.css
+++ b/src/variables.css
@@ -1,42 +1,41 @@
 html {
     --modal-backdrop-z-index: 9999;
-
     --backdrop-color: #00000080;
-
     --white: #fff;
     --black: #000;
     --gray: #8a8a8a;
-
     --default-border-radius: 6px;
 }
 
 html[data-theme='light'] {
     --main-background-color: var(--white);
     --main-color: var(--black);
-
     --dark-hover: #f5f5f5;
-
     --gray-border: #d9d9d9;
-
     --blue: #382bf0;
     --dark-blue: #251ca4;
+	--nav-menu: #272727;
 }
 
 html[data-theme='dark'] {
     --main-background-color: #323232;
     --main-color: var(--white);
-
-    --dark-hover: #272727;
-
+    --dark-hover: #212121;
     --gray-border: #4f4f4f;
-
     --blue: #7a5af5;
     --dark-blue: #5540aa;
+	--nav-menu: #272727;
+}
+
+/* fix macbook scroll */
+body {
+	background-color: var(--main-background-color);
 }
 
 #page {
-    background-color: var(--main-background-color);
     color: var(--main-color);
+
+    background-color: var(--main-background-color);
 
     transition: 
         background-color .3s ease-in,
