--- a/src/widgets/main-menu/main-menu.module.css
+++ b/src/widgets/main-menu/main-menu.module.css
@@ -1,12 +1,20 @@
 .root {
+	position: fixed;
+
 	box-sizing: border-box;
-	width: 15%;
-	min-width: 200px;
+	width: 300px;
 	height: 100vh;
 	padding: 32px 0 32px 24px;
 
+	background-color: var(--nav-menu);
+
 	transition: .3s;
-	border-right: 1px solid var(--gray-border);
+}
+
+.fix {
+	flex: 1;
+	min-width: 300px;
+	height: 50px;
 }
 
 .menu,
