--- a/src/shared/button/button.module.css
+++ b/src/shared/button/button.module.css
@@ -28,6 +28,7 @@
 	justify-content: center;
 	box-sizing: border-box;
 	width: fit-content;
+	min-width: 80px;
 	height: 32px;
 	padding: 4px 8px;
 
