add popup component

--- a/src/pages/Words/words.module.css
+++ b/src/pages/Words/words.module.css
@@ -11,3 +11,16 @@
 .addInput {
 	width: 400px;
 }
+
+.pageHeader {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.title {
+	margin: 0;
+
+	margin-bottom: 16px;
+	padding: 0;
+}
