--- a/src/shared/input/input.module.css
+++ b/src/shared/input/input.module.css
@@ -1,4 +1,6 @@
 .root {
+	position: relative;
+
 	display: flex;
 	align-items: center;
 	box-sizing: border-box;
@@ -20,10 +22,10 @@
 	margin: 0;
 	padding: 0;
 
+	color: var(--main-color);
+
 	background-color: transparent;
 	border: none;
-
-	color: var(--main-color);
 }
 
 .baseInput:active,
@@ -56,4 +58,13 @@
 .baseInput:focus-visible + .clearIcon,
 .baseInput:focus + .clearIcon {
 	opacity: 1;
+}
+
+.rightContent {
+	position: absolute;
+	right: 8px;
+}
+
+.hasCloseIcon {
+	right: 38px;
 }
