--- a/src/widgets/add-word-form/add-word-form.module.css
+++ b/src/widgets/add-word-form/add-word-form.module.css
@@ -11,3 +11,16 @@
 
 	user-select: none;
 }
+
+.autoTranslateBlock {
+	display: flex;
+	gap: 4px;
+
+	color: var(--gray);
+}
+
+.autoTranslateBlock span:not(:first-child):hover {
+	text-decoration: underline;
+
+	cursor: pointer;
+}
